# minesweeper

./: Main.hs  default.nix  minesweeper.cabal
