name:                minesweeper
version:             0.1.0.0
synopsis:            A minesweeper clone
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable minesweeper
  main-is:
    Main.hs
  ghcjs-options:
    -dedupe
  build-depends:
      base
    , grids
    , microlens
    , random
  default-language:
    Haskell2010
